--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"start": "webpack serve --mode development --open --hot",
 		"build": "webpack --mode production",
-		"test": "jest"
+		"test": "jest",
+		"prepare": "husky install"
 	},
 	"keywords": [],
 	"author": "",
@@ -62,7 +63,9 @@
 		"dotenv-webpack": "^7.0.3",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.3.1",
+		"husky": "^7.0.2",
 		"jest": "^27.2.0",
+		"lint-staged": "^11.1.2",
 		"mini-css-extract-plugin": "^1.5.0",
 		"node-sass": "^5.0.0",
 		"prettier": "^2.4.1",
@@ -74,5 +77,8 @@
 		"webpack-cli": "^4.5.0",
 		"webpack-dev-server": "^3.11.2"
 	},
-	"main": "index.js"
+	"main": "index.js",
+	"lint-staged": {
+		"*.{js,jsx,css,scss,md,json}": "prettier --write"
+	}
 }
