--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "bracketSpacing": false,
-  "endOfLine": "auto",
-  "printWidth": 80,
-  "semi": true,
-  "singleQuote": false,
-  "trailingComma": "all",
-  "useTabs": true
+	"bracketSpacing": false,
+	"endOfLine": "auto",
+	"printWidth": 80,
+	"semi": true,
+	"singleQuote": false,
+	"trailingComma": "all",
+	"useTabs": true,
+	"arrowParens": "always"
 }
