--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy build to Test server
 on:
   push:
     branches:
-      - main
+      - dev
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -17,7 +17,7 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+          known_hosts: "just-a-placeholder-so-we-dont-get-errors"
 
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_TEST_HOST }} >> ~/.ssh/known_hosts
