--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.5",
+		"@babel/eslint-parser": "^7.15.7",
 		"@babel/plugin-syntax-top-level-await": "^7.12.13",
 		"@babel/preset-env": "^7.13.15",
 		"@babel/preset-react": "^7.13.13",
@@ -61,6 +62,8 @@
 		"copy-webpack-plugin": "^7.0.0",
 		"css-loader": "^5.2.4",
 		"dotenv-webpack": "^7.0.3",
+		"eslint": "^7.32.0",
+		"eslint-plugin-react": "^7.26.1",
 		"file-loader": "^6.2.0",
 		"formik": "^2.2.9",
 		"html-webpack-plugin": "^5.3.1",
@@ -80,6 +83,7 @@
 	},
 	"main": "index.js",
 	"lint-staged": {
-		"*.{js,jsx,css,scss,md,json}": "prettier --write"
+		"*.{js,jsx,css,scss,md,json}": "prettier --write",
+		"*.{js,jsx}": "eslint --fix"
 	}
 }
