--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"dotenv-webpack": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.26.1",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"file-loader": "^6.2.0",
 		"formik": "^2.2.9",
 		"html-webpack-plugin": "^5.3.1",
