--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
 	"plugins": ["simple-import-sort"],
 	"env": {
 		"browser": true,
-		"node": true
+		"node": true,
+		"jest": true
 	},
 	"rules": {
 		"react/prop-types": "off",
