--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"freeton": "^0.6.0",
 		"fs": "0.0.1-security",
 		"hex2ascii": "0.0.3",
+		"lodash.memoize": "^4.1.2",
 		"notistack": "^1.0.6-next.3",
 		"pidcrypt": "^0.0.32",
 		"qrcode.react": "^1.0.1",
