--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"dayjs": "^1.10.7",
 		"freeton": "^0.6.0",
 		"fs": "0.0.1-security",
+		"graphql": "^16.0.1",
+		"graphql-request": "^3.6.1",
 		"hex2ascii": "0.0.3",
 		"notistack": "^2.0.2",
 		"lodash.clonedeep": "^4.5.0",
