--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@material-ui/core": "^5.0.0-beta.5",
 		"@material-ui/icons": "^5.0.0-beta.5",
 		"@material-ui/styles": "^5.0.0-beta.5",
+		"@material/checkbox": "^13.0.0",
 		"@mui/material": "^5.0.0",
 		"@tonclient/appkit": "^0.2.0",
 		"@tonclient/core": "^1.20.1",
@@ -31,11 +32,13 @@
 		"freeton": "^0.6.0",
 		"fs": "0.0.1-security",
 		"hex2ascii": "0.0.3",
+		"lodash.clonedeep": "^4.5.0",
 		"lodash.memoize": "^4.1.2",
 		"notistack": "^1.0.6-next.3",
 		"pidcrypt": "^0.0.32",
 		"qrcode.react": "^1.0.1",
 		"react": "^17.0.2",
+		"react-code-input": "^3.10.1",
 		"react-dom": "^17.0.2",
 		"react-number-format": "^4.7.3",
 		"react-range": "^1.8.7",
