feat: add graphql client

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "",
 	"dependencies": {
+		"@apollo/client": "^3.4.17",
 		"@emotion/babel-preset-css-prop": "^11.2.0",
 		"@emotion/react": "^11.4.1",
 		"@emotion/styled": "^11.3.0",
@@ -32,11 +33,10 @@
 		"freeton": "^0.6.0",
 		"fs": "0.0.1-security",
 		"graphql": "^16.0.1",
-		"graphql-request": "^3.6.1",
 		"hex2ascii": "0.0.3",
-		"notistack": "^2.0.2",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.memoize": "^4.1.2",
+		"notistack": "^2.0.2",
 		"pidcrypt": "^0.0.32",
 		"qrcode.react": "^1.0.1",
 		"react": "^17.0.2",
