--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react-use": "^17.2.4",
 		"redux": "^4.1.0",
 		"redux-devtools-extension": "^2.13.9",
+		"subscriptions-transport-ws": "^0.11.0",
 		"ton-inpage-provider": "^0.1.17"
 	},
 	"devDependencies": {
