chore: add storybook

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"start": "webpack serve --mode development --open --hot",
 		"build": "webpack --mode production",
 		"test": "jest",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,7 +17,7 @@
 		"@apollo/client": "^3.4.17",
 		"@emotion/babel-preset-css-prop": "^11.2.0",
 		"@emotion/react": "^11.4.1",
-		"@emotion/styled": "^11.3.0",
+		"@emotion/styled": "^11.6.0",
 		"@material-ui/core": "^5.0.0-beta.5",
 		"@material-ui/icons": "^5.0.0-beta.5",
 		"@material-ui/styles": "^5.0.0-beta.5",
@@ -39,6 +41,7 @@
 		"lodash.memoize": "^4.1.2",
 		"notistack": "^2.0.2",
 		"pidcrypt": "^0.0.32",
+		"prop-types": "^15.7.2",
 		"qrcode.react": "^1.0.1",
 		"react": "^17.0.2",
 		"react-code-input": "^3.10.1",
@@ -63,13 +66,21 @@
 		"@babel/plugin-syntax-top-level-await": "^7.12.13",
 		"@babel/preset-env": "^7.13.15",
 		"@babel/preset-react": "^7.13.13",
+		"@emotion/babel-plugin": "^11.3.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
+		"@storybook/addon-actions": "^6.3.12",
+		"@storybook/addon-essentials": "^6.3.12",
+		"@storybook/addon-links": "^6.3.12",
+		"@storybook/builder-webpack5": "^6.3.12",
+		"@storybook/manager-webpack5": "^6.3.12",
+		"@storybook/preset-scss": "^1.0.3",
+		"@storybook/react": "^6.3.12",
 		"@svgr/webpack": "^5.5.0",
 		"@types/jest": "^27.0.1",
 		"babel-loader": "^8.2.2",
 		"babel-polyfill": "^6.26.0",
 		"copy-webpack-plugin": "^7.0.0",
-		"css-loader": "^5.2.4",
+		"css-loader": "^6.5.1",
 		"dotenv-webpack": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.26.1",
@@ -84,12 +95,13 @@
 		"node-sass": "^5.0.0",
 		"prettier": "2.4.1",
 		"react-refresh": "^0.10.0",
-		"sass": "^1.32.11",
-		"sass-loader": "^11.0.1",
-		"style-loader": "^2.0.0",
+		"sass": "^1.43.4",
+		"sass-loader": "^12.3.0",
+		"style-loader": "^3.3.1",
 		"webpack": "^5.21.2",
 		"webpack-cli": "^4.5.0",
-		"webpack-dev-server": "^3.11.2"
+		"webpack-dev-server": "^3.11.2",
+		"webpack-merge": "^5.8.0"
 	},
 	"main": "index.js",
 	"lint-staged": {
