--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@material-ui/icons": "^5.0.0-beta.5",
 		"@material-ui/styles": "^5.0.0-beta.5",
 		"@material/checkbox": "^13.0.0",
+		"@mui/base": "^5.0.0-alpha.59",
 		"@mui/material": "^5.0.0",
 		"@tonclient/appkit": "^0.2.0",
 		"@tonclient/core": "^1.20.1",
