--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"classnames": "^2.3.1",
 		"core-js": "^3.12.1",
 		"dayjs": "^1.10.7",
+		"eslint-config-prettier": "^8.3.0",
 		"freeton": "^0.6.0",
 		"fs": "0.0.1-security",
 		"graphql": "^16.0.1",
