--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"fs": "0.0.1-security",
 		"graphql": "^16.0.1",
 		"hex2ascii": "0.0.3",
+		"immer": "^9.0.7",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.memoize": "^4.1.2",
 		"notistack": "^2.0.2",
@@ -57,6 +58,7 @@
 		"react-use": "^17.2.4",
 		"redux": "^4.1.0",
 		"redux-devtools-extension": "^2.13.9",
+		"redux-saga": "^1.1.3",
 		"subscriptions-transport-ws": "^0.11.0",
 		"ton-inpage-provider": "^0.1.17"
 	},
