--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"react-code-input": "^3.10.1",
 		"react-dom": "^17.0.2",
 		"react-number-format": "^4.7.3",
+		"react-outside-click-handler": "^1.3.0",
 		"react-range": "^1.8.7",
 		"react-rangeslider": "^2.2.0",
 		"react-redux": "^7.2.4",
