--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"graphql": "^16.0.1",
 		"hex2ascii": "0.0.3",
 		"immer": "^9.0.7",
+		"lodash": "^4.17.21",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.memoize": "^4.1.2",
 		"notistack": "^2.0.2",
