--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,9 @@
 		"jest": true,
 		"es6": true
 	},
+	"globals": {
+		"BigInt": true
+	},
 	"rules": {
 		"simple-import-sort/imports": "error",
 		"simple-import-sort/exports": "error",
