--- a/package.json
+++ b/package.json
@@ -31,18 +31,24 @@
 		"ascii-hex": "^1.0.1",
 		"axios": "^0.24.0",
 		"bignumber.js": "^9.0.1",
+		"bnc-notify": "^1.9.2",
+		"bnc-onboard": "^1.36.0",
 		"classnames": "^2.3.1",
 		"core-js": "^3.12.1",
+		"crypto-browserify": "^3.12.0",
 		"dayjs": "^1.10.7",
+		"ethers": "^5.5.2",
 		"freeton": "^0.6.0",
 		"fs": "0.0.1-security",
 		"graphql": "^16.0.1",
 		"hex2ascii": "0.0.3",
+		"https-browserify": "^1.0.0",
 		"immer": "^9.0.7",
 		"lodash": "^4.17.21",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.memoize": "^4.1.2",
 		"notistack": "^2.0.2",
+		"os-browserify": "^0.3.0",
 		"pidcrypt": "^0.0.32",
 		"prop-types": "^15.7.2",
 		"qrcode.react": "^1.0.1",
@@ -61,6 +67,8 @@
 		"redux": "^4.1.0",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-saga": "^1.1.3",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.2.0",
 		"subscriptions-transport-ws": "^0.11.0",
 		"ton-inpage-provider": "^0.1.17"
 	},
