--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-	"trailingComma": "all",
-	"singleQuote": true,
+	"bracketSpacing": false,
+	"endOfLine": "auto",
 	"printWidth": 80,
-	"tabWidth": 2
+	"semi": true,
+	"singleQuote": false,
+	"trailingComma": "all",
+	"useTabs": true,
+	"arrowParens": "always"
 }
