--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
