--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16.13.1'
 
-      - run: npm install
+      - run: npm ci
       - run: npm run build
 
       - name: Install SSH Key
