--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -25,4 +25,4 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.SSH_TEST_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy with rsync
-        run: rsync -avz ./build/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_TEST_HOST }}:/var/www/staging/build/
+        run: rsync -avz ./build/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_TEST_HOST }}:/var/www/test.defispace.com/
