--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "dayjs": "^1.10.7",
     "ethers": "^5.5.2",
     "freeton": "^0.6.0",
-    "fs": "0.0.1-security",
+    "fs": "^0.0.1-security",
     "graphql": "^16.0.1",
     "hex2ascii": "0.0.3",
+    "hex2dec": "^1.1.2",
     "https-browserify": "^1.0.0",
     "immer": "^9.0.7",
     "lodash": "^4.17.21",
