--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/base": "^5.0.0-alpha.59",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.0.0",
+    "@mui/x-data-grid": "^5.2.1",
     "@tonclient/appkit": "^0.2.0",
     "@tonclient/core": "^1.25.0",
     "@tonclient/lib-node": "^1.16.0",
@@ -38,6 +39,7 @@
     "core-js": "^3.12.1",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.10.7",
+    "eslint-plugin-prettier": "^4.0.0",
     "ethers": "^5.5.2",
     "freeton": "^0.6.0",
     "fs": "0.0.1-security",
