--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lodash.memoize": "^4.1.2",
+    "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
     "notistack": "^2.0.2",
     "os-browserify": "^0.3.0",
     "pidcrypt": "^0.0.32",
@@ -70,6 +72,7 @@
     "react-s-alert": "^1.4.1",
     "react-transition-group": "^4.4.1",
     "react-use": "^17.2.4",
+    "recharts": "^2.1.8",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
