--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@mui/base": "^5.0.0-alpha.59",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.0.0",
+    "@mui/system": "^5.3.0",
     "@mui/x-data-grid": "^5.2.1",
     "@tonclient/appkit": "^0.2.0",
     "@tonclient/core": "^1.25.0",
     "@tonclient/lib-node": "^1.16.0",
     "@tonclient/lib-web": "^1.25.0",
+    "@visx/scale": "^2.2.2",
     "ascii-hex": "^1.0.1",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.1",
@@ -38,6 +40,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.12.1",
     "crypto-browserify": "^3.12.0",
+    "d3-time-format": "^4.1.0",
     "dayjs": "^1.10.7",
     "eslint-plugin-prettier": "^4.0.0",
     "ethers": "^5.5.2",
@@ -99,6 +102,10 @@
     "@storybook/react": "^6.4.9",
     "@svgr/webpack": "^5.5.0",
     "@types/jest": "^27.0.1",
+    "@visx/curve": "^2.1.0",
+    "@visx/event": "^2.1.2",
+    "@visx/gradient": "^2.1.0",
+    "@visx/shape": "^2.4.0",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^7.0.0",
@@ -119,6 +126,7 @@
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
     "react-refresh": "^0.10.0",
+    "react-sizeme": "^3.0.2",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
